--- a/rezervace.css
+++ b/rezervace.css
@@ -237,6 +237,11 @@ body {
         grid-gap: 0px;
     }
 
+    .bloky-3-4 {
+        flex-direction: column;
+        grid-gap: 0px;
+    }
+
     .bloky-all {
         padding-left: 150px;
         padding-right: 150px;
