--- a/spravce.css
+++ b/spravce.css
@@ -1,4 +1,10 @@
+body {
+    font-family: Arial, sans-serif;
+}
+
 .header {
+    color: #fff;
+    text-align: center;
     display: flex;
     width: 100%;
     height: 100px;
@@ -8,11 +14,16 @@
 .logout {
     width: fit-content;
     height: 50px;
+    padding-right: 2rem;
     background-color: #333;
     opacity: 0.8;
     color: #fff;
     font-size: 15px;
     cursor: pointer;
+}
+
+.bold-text {
+    font-weight: bolder;
 }
 
 .reservations {
@@ -22,12 +33,27 @@
 }
 
 .res-row {
-    display: flex;
-    flex-direction: column;
+    width: 100%;
     border: 1px solid black;
-    width: 33%;
+    padding: 10px;
+    margin-bottom: 20px;
+    position: relative;
 }
 
+.res-row p {
+    margin: 5px 0;
+}
+
+.reservations p {
+    color: black;
+}
+
+@media screen and (max-width: 1200px) {
+    .reservations {
+        align-items: center;
+        flex-direction: column;
+    }
+}
 @media screen and (max-width: 780px) {
     .reservations {
         align-items: center;
@@ -38,3 +64,42 @@
         width: 80%;
     }
 }
+
+.edit-button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px; 
+    max-width: 150px;
+    border: none;
+    cursor: pointer;
+}
+
+
+.delete-button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px; 
+    max-width: 150px;
+    border: none;
+    cursor: pointer;
+}
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px; 
+    max-width: 150px;
+    border: none;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #0056b3;
+}
+
+.cont-buttons {
+    grid-gap: 3rem;
+    text-align: center;
+}
+
+
+
