--- a/style.css
+++ b/style.css
@@ -74,75 +74,4 @@ button:hover {
     flex-direction: row;
 }
 
-
-/* index */
-
-
-/* spravce */
-.header {
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-}
-
-footer {
-    text-align: center;
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-}
-
-.header {
-    display: flex;
-    width: 100%;
-    height: 100px;
-    justify-content: end;
-    
-}
-
-.logout {
-    width: fit-content;
-    height: 50px;
-    padding-right: 2rem;
-    background-color: #333;
-    opacity: 0.8;
-    color: #fff;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-.reservations {
-    display: flex;
-    flex-direction: row;
-    grid-gap: 1rem;
-}
-
-.res-row {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    width: 33%;
-}
-
-.res-row p {
-    margin: 5px 0;
-}
-
-.reservations p {
-    color: black;
-}
-
-@media screen and (max-width: 780px) {
-    .reservations {
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .res-row {
-        width: 80%;
-    }
-}
-
-.bold-text {
-    font-weight: bolder;
-}
+/* INDEX */
