--- a/rezervace.css
+++ b/rezervace.css
@@ -388,3 +388,40 @@ footer a {
 .weekend {
     color: red;
 }
+
+
+.header {
+    color: #fff;
+    width: 100%;
+    height: 100px;
+}
+
+
+.logout {
+    width: fit-content;
+    height: 50px;
+    background-color: #333;
+    opacity: 0.8;
+    color: #fff;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px; 
+    max-width: 150px;
+    border: none;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #0056b3;
+}
+
+@media screen and (max-width: 780px) {
+    .header {
+        justify-content: center;
+    }
+}
