--- a/rezervace.css
+++ b/rezervace.css
@@ -6,7 +6,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(image/background.jpg);
+    background-image: url(image/backgroundImage.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -14,6 +14,7 @@ body {
 
 .centerHeader {
     text-align: center;
+    justify-content: center;
 
 }
 
@@ -214,11 +215,15 @@ body {
     .bloky-1-2 {
         flex-direction: column;
         grid-gap: 0px;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .bloky-3-4 {
         flex-direction: column;
         grid-gap: 0px;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .bloky-all {
