--- a/index.css
+++ b/index.css
@@ -6,14 +6,14 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(image/indexback.png);
+    background-image: url(image/backgroundImage.jpg);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size: cover;
     background-attachment: fixed;
 }
 
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     text-align: center;
@@ -24,7 +24,7 @@ footer {
 }
 
 @media screen and (max-width: 780px) {
-    body{
+    body {
         background-image: none;
         background-color: white;
     }
@@ -34,10 +34,37 @@ footer {
     margin-top: 100px;
     font-size: xx-large;
     font-weight: bold;
-    color: black;
+    color: white;
+}
+
+.headerH3 {
+    margin-top: 20px;
+    font-size: xx-large;
+    font-weight: bold;
+    color: white;
 }
 
 .cont-1 {
+    display: flex;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.wavy-line {
+    position: relative;
+    top: 90%;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: repeating-linear-gradient(45deg, transparent, transparent 5px, #FFF 5px, #FFF 10px);
+    background-size: 100% 20px;
+}
+
+.cont-2 {
+    padding-top: 5000px;
     display: flex;
 }
 
@@ -66,11 +93,12 @@ footer {
 button {
     background-color: #007BFF;
     color: #fff;
-    padding: 10px 20px; 
+    padding: 10px 20px;
     max-width: 150px;
     border: none;
     cursor: pointer;
 }
+
 button:hover {
     background-color: #0056b3;
 }
