--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     text-align: center;
     padding: 0;
     margin: 0;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     height: 100%;
     width: 100%;
 }
@@ -17,7 +20,8 @@ main {
 }
 
 .container1 { /* Registrace */
-    max-width: 400px;
+    max-width: 600px;
+    width: 600px;
     margin: 0 auto;
     padding: 20px;
     display: flex;
@@ -25,7 +29,8 @@ main {
     align-items: center;
 }
 .container2 { /* Login */
-    max-width: 400px;
+    max-width: 600px;
+    width: 600px;
     margin: 0 auto;
     padding: 20px;
     display: flex;
