--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* login a registrace */
 body {
     font-family: Arial, sans-serif;
@@ -7,60 +6,101 @@ body {
     margin: 0;
     justify-content: center;
     align-items: center;
-    text-align: center;
     height: 100%;
     width: 100%;
+    background-color: #121212;
 }
 
 main {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
 }
 
-.container1 { /* Registrace */
+.container1 {
+    /* Registrace */
     max-width: 600px;
-    width: 600px;
+    width: auto;
     margin: 0 auto;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.container2 { /* Login */
+
+.container2 {
+    /* Login */
+    text-align: center;
     max-width: 600px;
-    width: 600px;
     margin: 0 auto;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.logo {
+    display: flex;
+    width: 100%;
+    height: 300px;
+    margin: 0 auto;
+    position: relative;
+    justify-content: center;
+}
+
+.logo img.left {
+    max-width: 100%;
+    height: auto;
+}
+
+@media screen and (max-width: 780px) {
+    .logo {
+        top: 0;
+        max-width: 120px;
+        height: 100px;
+        position: absolute;
+        left: 0;
+    }
+    .logo img.left {
+        max-width: 70%;
+        height: auto;
+        float: left;
+    }
 }
 
 .container2 a {
-    color: black;
+    color: white;
     font-weight: 200;
-    font-style: normal;
     text-decoration: none;
 }
 
 h1 {
-    color: #333;
+    color: white;
 }
-input[type="text"], input[type="password"], input[type="email"] {
+
+a {
+    color: white;
+}
+
+form {
+    width: 100%;
+    max-width: 300px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
 }
+
 button {
     background-color: #007BFF;
     color: #fff;
-    padding: 10px 20px; 
+    padding: 10px 20px;
     max-width: 150px;
     border: none;
     cursor: pointer;
 }
+
 button:hover {
     background-color: #0056b3;
 }
