--- a/navbar.css
+++ b/navbar.css
@@ -2,13 +2,12 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
-    opacity: 0.8;
+    background-color: #121212;
 }
 
 .topnav {
     overflow: hidden;
-    background-color: rgb(255, 255, 255);
+    background-color: #121212;
     width: fit-content;
     opacity: 0.8;
     font-weight: bold;
@@ -17,14 +16,14 @@
 .topnav a {
     float: left;
     font-size: 18px;
-    color: black;
+    color: white;
     text-align: center;
     padding: 14px 30px;
     text-decoration: none;
 }
 
 .topnav a:hover {
-    color: black;
+    color: grey;
 }
 
 .topnav .icon {
@@ -40,7 +39,7 @@
     font-size: 16px;
     border: none;
     outline: none;
-    color: black;
+    color: white;
     padding: 14px 30px;
     background-color: inherit;
     font-family: inherit;
@@ -56,7 +55,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #121212;
     opacity: 0.7;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -65,7 +64,7 @@
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -116,7 +115,7 @@
         text-align: left;
     }
     #ikony {
-        color: black;
+        color: white;
     }
 }
 
