--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, sans-serif;
+}
+
 .pozice {
     width: 100%;
     display: flex;
@@ -83,12 +87,15 @@
     .topnav a:not(:first-child) {
         display: none;
     }
+
     .dropdown {
         display: none;
     }
+
     .topnav {
         width: 80%;
     }
+
     .topnav a.icon {
         float: right;
         display: block;
@@ -99,24 +106,26 @@
     .topnav.responsive {
         position: relative;
     }
+
     .topnav.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
     }
+
     .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
     }
+
     .topnav.responsive.dropb {
         float: none;
         display: block;
         text-align: left;
     }
+
     #ikony {
         color: white;
     }
 }
-
-
