--- a/rezervace.css
+++ b/rezervace.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -291,6 +291,8 @@ body {
 }
 
 footer {
+    display: flex;
+    flex-direction: row;
     background-color: #333;
     height: 50px;
     width: 100%;
@@ -338,7 +340,7 @@ footer a {
 .background {
     max-width: 600px;
     width: 600px;
-    background-color: white;
+    background-color: #121212;
 }
 
 /* Kalendář */
@@ -430,3 +432,5 @@ button:hover {
         justify-content: center;
     }
 }
+
+
