--- a/spravce.css
+++ b/spravce.css
@@ -1,5 +1,8 @@
 body {
     font-family: Arial, sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: rgba(18, 18, 18, 0.9);
 }
 
 .header {
@@ -17,7 +20,7 @@ body {
     padding-right: 2rem;
     background-color: #333;
     opacity: 0.8;
-    color: #fff;
+    color: white;
     font-size: 15px;
     cursor: pointer;
 }
@@ -34,7 +37,7 @@ body {
 
 .res-row {
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid #007BFF;
     padding: 10px;
     margin-bottom: 20px;
     position: relative;
@@ -45,7 +48,7 @@ body {
 }
 
 .reservations p {
-    color: black;
+    color: white;
 }
 
 @media screen and (max-width: 1200px) {
