--- a/rezervace.css
+++ b/rezervace.css
@@ -15,6 +15,7 @@ body {
 .centerHeader {
     text-align: center;
     justify-content: center;
+    color: white;
 
 }
 
@@ -60,7 +61,9 @@ body {
 }
 
 .menu-btn:hover {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: white;
+    opacity: 0.7;
+    color: black;
 }
 
 #menu {
@@ -86,7 +89,7 @@ body {
 
 #menu ul li a {
     text-decoration: none;
-    color: #333;
+    color: white;
 }
 
 #menu ul li:hover {
@@ -106,7 +109,9 @@ body {
 }
 
 .menu2-btn:hover {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: white;
+    opacity: 0.7;
+    color: black;
 }
 
 #menu2 {
@@ -132,7 +137,7 @@ body {
 
 #menu2 ul li a {
     text-decoration: none;
-    color: #333;
+    color: white;
 }
 
 #menu2 ul li:hover {
@@ -152,7 +157,9 @@ body {
 }
 
 .menu3-btn:hover {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: white;
+    opacity: 0.7;
+    color: black;
 }
 
 
@@ -179,7 +186,7 @@ body {
 
 #menu3 ul li a {
     text-decoration: none;
-    color: #333;
+    color: white;
 }
 
 #menu3 ul li:hover {
@@ -199,7 +206,9 @@ body {
 }
 
 .menu4-btn:hover {
-    background-color: rgba(0, 0, 0, 0.7);
+     background-color: white;
+    opacity: 0.7;
+    color: black;
 }
 
 
@@ -264,7 +273,6 @@ body {
 }
 
 .right-s {
-    text-align: left;
     display: flex;
     flex-direction: column;
 }
@@ -273,17 +281,19 @@ body {
     display: flex;
     flex-direction: row;
     grid-gap: 1rem;
+    color: white;
+    justify-content: space-between;
 }
 
 .right-si {
-    display: flex;
+    text-align: right;
+    justify-content: end;
 }
 
 .column-oph {
     display: flex;
     flex-direction: column;
-    text-align: left;
-    font-size: small;
+    color: white;
 }
 
 .bold {
