--- a/rezervace.css
+++ b/rezervace.css
@@ -307,6 +307,8 @@ footer {
     height: 50px;
     width: 100%;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     color: white;
 }
 
