--- a/editor.css
+++ b/editor.css
@@ -55,12 +55,23 @@ button:hover {
 
 form label {
     font-size: x-large;
+    font-weight: bold;
     padding: 5px;
 }
 
 form select {
     width: 150px;
     height: 30px;
+}
+
+select {
+    width: 200px;
+    height: 50px;
+    font-size: large;
+}
+
+option {
+    font-size: large;
 }
 
 .lineblue {
@@ -109,11 +120,13 @@ form select {
 .bolderService {
     font-weight: bold;
     color: white;
+    font-size: x-large;
 }
 
 .bolderService input {
     width: 300px;
     height: 50px;
+    font-size: large;
 }
 
 
@@ -220,7 +233,7 @@ input {
     text-align: center;
     display: flex;
     flex-direction: row;
-    grid-gap: 5rem;
+    grid-gap: 3rem;
 }
 
 .group2 {
@@ -231,7 +244,7 @@ input {
     text-align: center;
     display: flex;
     flex-direction: row;
-    grid-gap: 5rem;
+    grid-gap: 3rem;
 }
 
 .it1 {
@@ -244,8 +257,9 @@ input {
     display: flex;
     flex-direction: column;
     max-width: 100%;
+    height: 500px;
     color: white;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     text-align: right;
 }
@@ -256,7 +270,7 @@ input {
     max-width: 100%;
     height: 500px;
     color: white;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     text-align: right;
 }
@@ -271,7 +285,7 @@ input {
     flex-direction: column;
     max-width: 100%;
     color: white;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     text-align: right;
 }
@@ -291,6 +305,11 @@ input {
 
     .timeEdt {
         padding: 20px;
+    }
+
+
+    .gap {
+        flex-direction: column;
     }
 }
 
@@ -315,4 +334,37 @@ input {
         text-align: center;
         padding: 40px;
     }
+
+}
+
+.CServiceEdt {
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    color: white;
+    justify-content: start;
+    align-items: center;
+    text-align: right;
+}
+
+.gap {
+    display: flex;
+    flex-direction: row;
+    grid-gap: 3rem;
+}
+
+.disabled-option {
+    color: black;
+    opacity: 0.5;
+}
+
+.buttonCalendar.existingDate {
+    background-color: red;
+    color: white;
+}
+
+.updatedButtonColor {
+    background-color: red;
+    color: white;
 }
