--- a/rezervace.css
+++ b/rezervace.css
@@ -57,6 +57,7 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
+    height: 30px;
     width: 250px;
 }
 
@@ -105,6 +106,7 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
+    height: 30px;
     width: 250px;
 }
 
@@ -153,6 +155,7 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
+    height: 30px;
     width: 250px;
 }
 
@@ -202,11 +205,13 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
+    align-items: center;
+    height: 30px;
     width: 250px;
 }
 
 .menu4-btn:hover {
-     background-color: white;
+    background-color: white;
     opacity: 0.7;
     color: black;
 }
@@ -214,7 +219,7 @@ body {
 
 #menu4 {
     display: none;
-    width: 250px;
+    width: 270px;
     overflow-y: auto;
     max-height: 250px;
     z-index: 1;
@@ -430,11 +435,12 @@ footer a {
 button {
     background-color: #007BFF;
     color: #fff;
-    padding: 10px 20px; 
+    padding: 10px 20px;
     max-width: 150px;
     border: none;
     cursor: pointer;
 }
+
 button:hover {
     background-color: #0056b3;
 }
@@ -446,5 +452,14 @@ button:hover {
 }
 
 .ui-datepicker-week-end {
-    display: none; /* Skryje soboty a neděle */
-  }
+    display: none;
+    /* Skryje soboty a neděle */
+}
+
+.ui-state-default {
+    width: 20px;
+}
+
+.ui-datepicker {
+    width: 15.1em;
+}
