--- a/rezervace.css
+++ b/rezervace.css
@@ -26,12 +26,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-gap: 20px;
 }
 
 .bloky-1-2 {
     display: flex;
     flex-direction: row;
-    grid-gap: 25px;
+    grid-gap: 10px;
     padding-left: 25px;
     padding-right: 25px;
 }
@@ -39,7 +40,7 @@ body {
 .bloky-3-4 {
     display: flex;
     flex-direction: row;
-    grid-gap: 25px;
+    grid-gap: 10px;
     padding-left: 25px;
     padding-right: 25px;
     padding-bottom: 25px;
@@ -58,7 +59,7 @@ body {
     padding-bottom: 10px;
     text-align: center;
     height: 30px;
-    width: 250px;
+    width: 280px;
 }
 
 .menu-btn:hover {
@@ -69,7 +70,7 @@ body {
 
 #menu {
     display: none;
-    width: 250px;
+    width: 280px;
     overflow-y: auto;
     max-height: 200px;
     z-index: 1;
@@ -107,7 +108,7 @@ body {
     padding-bottom: 10px;
     text-align: center;
     height: 30px;
-    width: 250px;
+    width: 280px;
 }
 
 .menu2-btn:hover {
@@ -118,7 +119,7 @@ body {
 
 #menu2 {
     display: none;
-    width: 250px;
+    width: 280px;
     overflow-y: auto;
     max-height: 200px;
     z-index: 1;
@@ -156,7 +157,7 @@ body {
     padding-bottom: 10px;
     text-align: center;
     height: 30px;
-    width: 250px;
+    width: 280px;
 }
 
 .menu3-btn:hover {
@@ -168,7 +169,7 @@ body {
 
 #menu3 {
     display: none;
-    width: 250px;
+    width: 280px;
     overflow-y: auto;
     max-height: 200px;
     z-index: 1;
@@ -207,7 +208,7 @@ body {
     text-align: center;
     align-items: center;
     height: 30px;
-    width: 250px;
+    width: 280px;
 }
 
 .menu4-btn:hover {
@@ -219,30 +220,47 @@ body {
 
 #menu4 {
     display: none;
-    width: 270px;
+    width: 280px;
     overflow-y: auto;
-    max-height: 250px;
+    max-height: 280px;
     z-index: 1;
 }
 
 @media screen and (max-width: 780px) {
     .bloky-1-2 {
         flex-direction: column;
-        grid-gap: 0px;
+        grid-gap: 10px;
         padding-left: 0;
         padding-right: 0;
     }
 
     .bloky-3-4 {
         flex-direction: column;
-        grid-gap: 0px;
+        grid-gap: 10px;
         padding-left: 0;
         padding-right: 0;
     }
 
     .bloky-all {
+        grid-gap: 10px;
         padding-left: 150px;
         padding-right: 150px;
+    }
+
+    .menu-btn{
+        border: 1px solid white;
+    }
+
+    .menu2-btn{
+        border: 1px solid white;
+    }
+
+    .menu3-btn{
+        border: 1px solid white;
+    }
+
+    .menu4-btn{
+        border: 1px solid white;
     }
 
     .confirm {
@@ -457,9 +475,31 @@ button:hover {
 }
 
 .ui-state-default {
-    width: 20px;
+    width: 35px;
 }
 
-.ui-datepicker {
-    width: 15.1em;
+/* Corner radius */
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-left,
+.ui-corner-tl {
+	border-top-left-radius: 0px;
+}
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-right,
+.ui-corner-tr {
+	border-top-right-radius: 0px;
+}
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-left,
+.ui-corner-bl {
+	border-bottom-left-radius: 0px;
+}
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-right,
+.ui-corner-br {
+	border-bottom-right-radius: 0px;
 }
