--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* login a registrace */
 body {
     font-family: Arial, sans-serif;
     text-align: center;
@@ -17,7 +16,6 @@ main {
 }
 
 .container1 {
-    /* Registrace */
     max-width: 600px;
     width: auto;
     margin: 0 auto;
@@ -27,7 +25,6 @@ main {
 }
 
 .container2 {
-    /* Login */
     text-align: center;
     max-width: 600px;
     margin: 0 auto;
@@ -58,6 +55,7 @@ main {
         position: absolute;
         left: 0;
     }
+
     .logo img.left {
         max-width: 70%;
         height: auto;
@@ -105,8 +103,6 @@ button:hover {
     background-color: #0056b3;
 }
 
-
-/* main select */
 .select {
     display: flex;
     flex-direction: column;
@@ -119,4 +115,19 @@ button:hover {
     flex-direction: row;
 }
 
-/* INDEX */
+.home-page-con {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-page {
+    font-size: 26px;
+    font-style: none;
+    right: 30px;
+    top: 10px;
+}
