--- a/style.css
+++ b/style.css
@@ -47,21 +47,6 @@ main {
     height: auto;
 }
 
-@media screen and (max-width: 780px) {
-    .logo {
-        top: 0;
-        max-width: 120px;
-        height: 100px;
-        position: absolute;
-        left: 0;
-    }
-
-    .logo img.left {
-        max-width: 70%;
-        height: auto;
-        float: left;
-    }
-}
 
 .container2 a {
     color: white;
@@ -118,7 +103,7 @@ button:hover {
 .home-page-con {
     display: flex;
     width: 100%;
-    height: 50px;
+    height: 70px;
     text-align: center;
     flex-direction: row;
     justify-content: center;
@@ -130,4 +115,27 @@ button:hover {
     font-style: none;
     right: 30px;
     top: 10px;
+    width: 100%;
+}
+
+@media screen and (max-width: 780px) {
+    .logo {
+        top: 0;
+        max-width: 100%;
+        height: 100px;
+        position: relative;
+        left: 0;
+    }
+
+    .logo img.left {
+        max-width: 70%;
+        height: auto;
+        float: left;
+    }
+
+    .home-page-con {
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
 }
