--- a/styles/editor.css
+++ b/styles/editor.css
@@ -313,7 +313,7 @@ input {
         flex-direction: column;
     }
 
-    .bolderService {
+    .bolderService text {
         text-align: center;
     }
 }
