--- a/styles/spravce.css
+++ b/styles/spravce.css
@@ -36,7 +36,7 @@ body {
 }
 
 .res-row {
-    width: 100%;
+    width: calc(33.33% - 1rem - 20px);
     border: 1px solid #007BFF;
     padding: 10px;
     margin-bottom: 20px;
@@ -64,7 +64,7 @@ body {
     }
 
     .res-row {
-        width: 80%;
+        width: calc(100% - 1rem - 20px);
     }
 }
 
@@ -100,8 +100,10 @@ button:hover {
 }
 
 .cont-buttons {
-    grid-gap: 3rem;
+    display: flex;
+    grid-gap: 1rem;
     text-align: center;
+    justify-content: center;
 }
 
 
